# flockdb

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  wake-latency-widearea.yml  wake-latency.yml  wake-query.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_smoke.py
crates/flock-cli/: Cargo.toml
crates/flock-cli/src/: cli.rs  error.rs  main.rs  render.rs  workspace.rs
crates/flock-cli/src/cmd/: branch.rs  import.rs  mod.rs  sql.rs  tier.rs
crates/flock-cli/tests/: cli.rs  tier.rs
crates/flock-core/: Cargo.toml
crates/flock-core/benches/: tpch.rs
crates/flock-core/src/: db.rs  error.rs  lib.rs  pool.rs  replica.rs  store.rs  wake.rs
crates/flock-core/tests/: export_duckdb.rs  fork_isolation.rs  replica.rs  snapshot_restore.rs  sql_smoke.rs  tiering.rs
crates/flock-core/tests/common/: mod.rs
crates/flock-kernel/: Cargo.toml
crates/flock-kernel/src/: duck.rs  error.rs  lib.rs  paging.rs  stream.rs
crates/flock-sync/: Cargo.toml
crates/flock-sync/src/: clock.rs  error.rs  lib.rs  replica.rs  shipment.rs  source.rs
crates/flock-sync/tests/: oracle.rs  shipping.rs
crates/flock-vfs/: Cargo.toml
crates/flock-vfs/fuzz/: Cargo.toml
crates/flock-vfs/fuzz/fuzz_targets/: serve_read.rs
crates/flock-vfs/src/: backend.rs  error.rs  ffi.rs  lib.rs  read.rs  source.rs  tiered.rs
crates/flock-vfs/tests/: concurrent_faults.rs  prefetch.rs  proptest_read.rs  roundtrip_tiered.rs  s3_measure.rs
crates/flockd/: Cargo.toml
crates/flockd/src/: lib.rs  scheduler.rs
crates/flockd/tests/: wake_warm.rs
docs/: wake-latency.md
examples/: trades.csv
extension/flock-vfs/: CMakeLists.txt  README.md
extension/flock-vfs/include/: flock_vfs_ffi.h
extension/flock-vfs/src/: flock_file_system.cpp  flock_file_system.hpp  flock_vfs_extension.cpp
proofs/lazy-wake/: README.md  analyze.py  harness.c  readtrace.c  run.sh
scripts/: quickstart.sh
spikes/wake-latency/: Cargo.toml  README.md  duckharness.c  run.sh
spikes/wake-latency/faultshim/: Cargo.toml  build.rs  faultglue.c
spikes/wake-latency/faultshim/src/: lib.rs
spikes/wake-latency/seed/: Cargo.toml
spikes/wake-latency/seed/src/: main.rs
spikes/wake-query/: Cargo.toml  README.md  measure.cpp  run.sh
spikes/wake-query/seed/: Cargo.toml
spikes/wake-query/seed/src/: main.rs
