[workspace]
members = [
    "crates/flock-kernel",
    "crates/flock-core",
    "crates/flock-sync",
    "crates/flock-vfs",
    "crates/flock-cli",
    "crates/flockd",
    "bindings/python",
]
# The fuzz target is a nightly, libFuzzer-instrumented crate. It is NOT a workspace member — it must
# not be pulled into `cargo build`/`clippy --workspace` on stable — and it declares its own
# `[workspace]` table to detach, exactly like the measurement spikes do.
exclude = ["crates/flock-vfs/fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/Bobcatsfan33/flockdb"

[workspace.dependencies]
# Substrate is a dependency, not a destination (docs/02 §5). Pinned to a tag, never a branch:
# a moving dependency under a storage engine means the on-disk format can change without a
# version bump, and a store written on Tuesday stops opening on Wednesday.
#
# v1.2.1+ and not v1.1, for one reason that would have bitten us exactly once, in production, on the
# database that mattered: v1.1's `sleep()` uploaded only the HEAD manifest. An overlay manifest
# cannot resolve the pages it did not itself touch without its base — and overlays are the normal
# case — so a database whose head was an overlay woke up able to read whatever the top overlay
# happened to hold, and nothing else. Silently. v1.2.1 uploads the head's whole ancestry.
# v1.2.2 made airgap a real compile-time amputation (no S3 client under --no-default-features).
# v1.3.0 adds the additive TieredStore::get_batch (dedupe-by-object concurrent multi-page fetch) — the
# shared primitive the F4 wake redesign consumes; single-page path unchanged, so this re-pin is a no-op
# until flock-vfs/flockd map their fault sets onto it.
substrate-pager = { git = "https://github.com/Bobcatsfan33/substrate", tag = "substrate-v1.3.0" }
substrate-wal = { git = "https://github.com/Bobcatsfan33/substrate", tag = "substrate-v1.3.0" }
substrate-store = { git = "https://github.com/Bobcatsfan33/substrate", tag = "substrate-v1.3.0" }

# Object storage, and the async runtime it needs.
#
# `substrate-pager` and `substrate-wal` are synchronous on purpose (deterministic replay and crash
# injection require deterministic execution). `substrate-store` is where tokio appears, and a cache
# miss on the synchronous read path blocks on an async fetch — which REQUIRES a multi-threaded
# runtime. A current-thread runtime deadlocks. That is why `sleep`/`wake` are async and say so.
object_store = "0.11"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

# `bundled` compiles DuckDB from source and links it statically. No system library, no
# `LD_LIBRARY_PATH`, and — the reason that matters here — no network at run time, which is what
# CLAUDE.md rule 5 (airgap) requires.
duckdb = { version = "1.10504", features = ["bundled"] }

thiserror = "2"
tempfile = "3"
criterion = "0.5"

# ── The CLI, and the Python bindings ────────────────────────────────────────────────────────────
#
# `clap`'s derive API, because the alternative is hand-parsed `std::env::args()` and a `--help` that
# rots. `serde_json` is the CLI's only persistence format of its own: the sleep record, which holds
# substrate's `WakeToken` verbatim rather than re-modelling it.
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# maturin + pyo3, and not a hand-rolled C ABI. `abi3-py39` builds ONE extension module that works on
# every CPython from 3.9 up, which is the difference between a wheel per (python, os, arch) and a
# wheel per (os, arch) — and it is the reason `pip install` from a repo checkout does not need the
# exact interpreter the wheel was built for.
pyo3 = { version = "0.29", features = ["abi3-py39", "extension-module"] }

# ── Build DuckDB itself optimized, in every profile ─────────────────────────────────────────────
#
# `bundled` compiles ~350,000 lines of C++ that we never debug, never change, and did not write.
# Left on the dev profile's defaults it is built `-O0 -g`, which costs **6.9 GB of `target/`** (a
# 1.4 GB rlib, statically re-linked into every test binary), and makes the test suite slower than
# the storage engine it is testing. Neither buys anything: a stack frame inside DuckDB's optimizer
# is not a frame we are going to act on.
#
# So: optimized, no symbols, everywhere. Our own crates keep their debug info — those frames we do
# act on. This is not a micro-optimisation, it is the difference between a repo that fits on a
# laptop and one that does not.
[profile.dev.package.libduckdb-sys]
opt-level = 2
debug = false

[profile.test.package.libduckdb-sys]
opt-level = 2
debug = false

# Benchmarks profile our code, so our code keeps its symbols.
[profile.bench]
debug = true

[profile.bench.package.libduckdb-sys]
debug = false
