[package]
name = "flock-core"
description = "FlockDB's public API: a forkable, snapshottable analytical database with a one-command escape hatch."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["database", "fork", "snapshot", "duckdb", "olap"]
categories = ["database-implementations"]

[dependencies]
flock-kernel = { path = "../flock-kernel", version = "0.1.0" }
substrate-pager.workspace = true
substrate-wal.workspace = true
duckdb.workspace = true
thiserror.workspace = true
tempfile.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[features]
default = []
airgap = ["flock-kernel/airgap"]

# Enables the TPC-H benchmark body. It pulls in no new dependencies and changes no library code —
# it is a gate on `benches/tpch.rs` compiling to something other than a message.
#
# It is a gate because `cargo test --all-targets` *runs* bench targets, and a five-minute TPC-H run
# in the middle of the unit tests would be the fastest possible way to teach everyone to stop
# running the tests.
#
# **The benchmark needs the network on its first run**, to fetch DuckDB's official TPC-H extension
# (cached in ~/.duckdb/extensions afterwards). The library does not, and never will — that is what
# `--features airgap` is for, and it is a separate CI job precisely so the two cannot be confused.
tpch = []

[[bench]]
name = "tpch"
harness = false
